# OpenGLPratice

./: .gitignore
OpenGLPractice/: CMakeLists.txt  OpenGLPractice.sln  OpenGLPractice.sln.metaproj  OpenGLPractice.vcxproj  OpenGLPractice.vcxproj.filters  imgui.ini
OpenGLPractice/res/shaders/: Basic.shader  Basic2D.shader  Basic3D.shader  DepthTest.shader  Light.shader  LightCaster.shader  LightMaps.shader  MultiLights.shader  Reflection.shader  Refraction.shader  Screen.shader  SingleColor.shader  Skybox.shader  Texture.shader  TextureMix.shader
OpenGLPractice/src/: Application.cpp  Camera.cpp  Camera.h  GameObject.h  IndexBuffer.h  Material.h  Renderer.cpp  Renderer.h  SampleManager.cpp  SampleManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  UIManager.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGLPractice/src/Common/: Camera.cpp  Camera.h  CameraUniformBuffer.h  GameObject.h  Light.h  LightProperties.h  Material.h  MaterialDatabase.cpp  MaterialDatabase.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h
OpenGLPractice/src/Graphics/: IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
OpenGLPractice/src/Meshes/: Cube.h  Mesh.h  Rectangle.h  Sphere.h  Triangle.h
OpenGLPractice/src/Models/: Cube.h  Model.h  Rectangle.h  Sphere.h  Triangle.h
OpenGLPractice/src/Samples/: Sample.h  SampleClearColor.cpp  SampleClearColor.h  SampleDepthTesting.cpp  SampleDepthTesting.h  SampleEnvironmentMapping.cpp  SampleEnvironmentMapping.h  SampleImportModel.cpp  SampleImportModel.h  SampleLightCaster.cpp  SampleLightCaster.h  SampleLightTest.cpp  SampleLightTest.h  SampleLightingMaps.cpp  SampleLightingMaps.h  SampleMultiLight.cpp  SampleMultiLight.h  SamplePolygonTriangle.cpp  SamplePolygonTriangle.h  (+8 more)
(+6 files in other folders)
